--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 <h3>Links for each .JSON:</h3>
             </div>
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('RR')">Related Rates (Two Formulas)</button>
+                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('RR2')">Related Rates (Two Formulas)</button>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('RR1')">Related Rates (One Formulas)</button>
             </div>
             <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Test')">Test .JSON</button>
@@ -67,8 +70,11 @@
             case "Test":
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Output.json"
                 break;
-            case "RR":
+            case "RR2":
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/RR%20(TF).json"
+                break;
+            case "RR1":
+                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/RR%20(OF).json"
                 break;
         }
         textArea.value = `
