--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/RR%20(TF).json"
                 break;
             case "RR1":
-                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/RR%20(OF).json"
+                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Related%20Rates%20(One%20Formula).json"
                 break;
         }
         textArea.value = `
