--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Output.json"
                 break;
             case "RR2":
-                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/RR%20(TF).json"
+                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Related%20Rates%20(Two%20Formulas).json"
                 break;
             case "RR1":
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Related%20Rates%20(One%20Formula).json"
