--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h3>Links for each .JSON:</h3>
+            </div>
             <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Test')">Test .JSON (Related Rates - Two Formulas) </button>
             </div>
