--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <div class="modal-body">
                 <ol>
                     <li>Click the button that corresponds to the assignment name/problem type</li>
-                    <li>In the website's console, paste the code that was copied to your clipboard when you pressed the button and enter</li>
+                    <li>In the website's console, paste the code that was copied to your clipboard when you pressed the button and enter (you will get a popup, just click "OK")</li>
                     <li>In the output, you will see something like <span class="d-inline-block rounded border align-middle pb-1 px-1 small"><small>(Number) [Array(2), Array(2), ...]</small></span> or something similar. Right click that output, and select <span class="d-inline-block rounded border align-middle pb-1 px-1 small"><small>Store object as global variable</small></span></li>
                     <li>Now press <button class="d-inline-block rounded border align-middle pb-1 px-1 small" onclick="copyToClipboard('const answer_key = temp1')"><small>this button</small></button>, then paste that into the console and enter</li>
-                    <li>Repeat step 4 with <button class="d-inline-block rounded border align-middle pb-1 px-1 small" onclick="copyAnswerGenerator()"><small>this button</small></button></li>
-                    <li>Re-enter the code from step 5 for every new question by pressing the up arrow, then enter again, untill all questions have been answered</li>
+                    <li>Zoom out twice and repeat step 4 with <button class="d-inline-block rounded border align-middle pb-1 px-1 small" onclick="copyAnswerGenerator()"><small>this button</small></button></li>
+                    <li>Delete the element with insepctelement, then re-enter the code from step 5 for every new question by pressing the up arrow, then enter again, untill all questions have been answered</li>
                 </ol>
             </div>
         </div>
