--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     <li>In the output, you will see something like <span class="d-inline-block rounded border align-middle pb-1 px-1 small"><small>(Number) [Array(2), Array(2), ...]</small></span> or something similar. Right click that output, and select <span class="d-inline-block rounded border align-middle pb-1 px-1 small"><small>Store object as global variable</small></span></li>
                     <li>Now press <button class="d-inline-block rounded border align-middle pb-1 px-1 small" onclick="copyToClipboard('const answer_key = temp1')"><small>this button</small></button>, then paste that into the console and enter</li>
                     <li>Zoom out twice and repeat step 4 with <button class="d-inline-block rounded border align-middle pb-1 px-1 small" onclick="copyAnswerGenerator()"><small>this button</small></button></li>
-                    <li>Delete the element with insepctelement, then re-enter the code from step 5 for every new question by pressing the up arrow, then enter again, untill all questions have been answered</li>
+                    <li>Delete the current answer using inspect element</li>
+                    <li>Re-enter the code from step 5 for every new question by pressing the up arrow, then enter again, untill all questions have been answered</li>
                 </ol>
             </div>
         </div>
