--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h3>Links for each .JSON:</h3>
             </div>
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Test')">Test .JSON (Related Rates - Two Formulas) </button>
+                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Test')">Test .JSON (Analyzing First Derivative Algebraically) </button>
             </div>
         </div>
         <div class="modal-content">
@@ -63,7 +63,7 @@
         var textArea = document.createElement('textarea');
         switch (text) {
             case "Test":
-                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/RRTFTest.json"
+                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Analyzing%20First%20Derivative%20Algebraically.json"
                 break;
         }
         textArea.value = `
