--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h3>Links for each .JSON:</h3>
             </div>
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Test')">Test .JSON (Analyzing First Derivative Algebraically) </button>
+                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Test')">Analyzing First Derivative Algebraically</button>
             </div>
         </div>
         <div class="modal-content">
