--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ function tryQueryElement(element) {
       throw new Error("Element not found");
     }
 
-    return element.textContent;
+    return element;
   } catch (error) {
     console.error(error.message);
     return null;
@@ -139,12 +139,12 @@ function tryQueryElement(element) {
 var problem = document.querySelector("#problemPrompt").textContent
 
 // Attempt the first selector
-problem += tryQueryElement(document.querySelector("#question_page > div > div.logic-row.line-type.row.hasJax.mt-9.first\\:mt-0 > div.resize-katex.jax.max-sm\\:\\!px-0.col-md-9.col-xs-12 > span > span > span.katex-html"))
+problem += tryQueryElement(document.querySelector("#question_page > div > div.logic-row.line-type.row.hasJax.mt-9.first\\:mt-0 > div.resize-katex.jax.max-sm\\:\\!px-0.col-md-9.col-xs-12 > span > span > span.katex-html").textContent)
 
 
 // Given input string
 var inputString = problem
-const fracRegex = /(?:[+-]?\d*\\frac\{(\d+)\}\{(\d+)\})/g;
+const fracRegex = /(?:\\text{)?-?\\frac{(\d+)}{(\d+)}/;
 const regex = /^[^\\]+/;
 
 
