--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ for (var i = 0; i < answer_key.length; i++) {
         const regexResult = answer_key[i][1].match(regex)?.[0];
         if (fracResult !== undefined) {
           if (answer_key[i][1].includes("\\\\ge")) {
-              console.log(``x≥${fracResult}``)
+              console.log(`x%E2%89%A5%24%7BfracResult%7D`)
           } else if (answer_key[i][1].includes("\\\\le")) {
-          console.log(``x≤${fracResult}``)
+          console.log(`x%E2%89%A4%24%7BfracResult%7D`)
           } else {
               console.log(fracResult)
           }
