--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li>In the website's console, paste the code that was copied to your clipboard when you pressed the button and enter (you will get a popup, just click "OK")</li>
                     <li>In the output, you will see something like <span class="d-inline-block rounded border align-middle pb-1 px-1 small"><small>(Number) [Array(2), Array(2), ...]</small></span> or something similar. Right click that output, and select <span class="d-inline-block rounded border align-middle pb-1 px-1 small"><small>Store object as global variable</small></span></li>
                     <li>Now press <button class="d-inline-block rounded border align-middle pb-1 px-1 small" onclick="copyToClipboard('const answer_key = temp1')"><small>this button</small></button>, then paste that into the console and enter</li>
-                    <li>Zoom out twice and repeat step 4 with <button class="d-inline-block rounded border align-middle pb-1 px-1 small" onclick="copyAnswerGenerator()"><small>this button</small></button></li>
+                    <li>Zoom out twice and repeat step 4 with <a href="https://pastebin.com/raw/itGAFe7P">this link</a></li>
                     <li>Delete the current answer using inspect element</li>
                     <li>Re-enter the code from step 5 for every new question by pressing the up arrow, then enter again, untill all questions have been answered</li>
                 </ol>
@@ -139,12 +139,12 @@ function tryQueryElement(element) {
 var problem = document.querySelector("#problemPrompt").textContent
 
 // Attempt the first selector
-problem += tryQueryElement(document.querySelector("#question_page > div > div.logic-row.line-type.row.hasJax.mt-9.first\\\\:mt-0 > div.resize-katex.jax.max-sm\\\\:\\\\!px-0.col-md-9.col-xs-12 > span > span > span.katex-html").textContent)
+problem += tryQueryElement(document.querySelector("#question_page > div > div.logic-row.line-type.row.hasJax.mt-9.first\\:mt-0 > div.resize-katex.jax.max-sm\\:\\!px-0.col-md-9.col-xs-12 > span > span > span.katex-html").textContent)
 
 // Given input string
 var inputString = problem
-const fracRegex = /(?:\\\\text{)?-?\\\\frac{(\\d+)}{(\\d+)}/;
-const regex = /^[^\\\\]+/;
+const fracRegex = /(?:\\text{)?-?\\frac{(\d+)}{(\d+)}/;
+const regex = /^[^\\]+/;
 
 
 // Iterate over the answer_key array
@@ -155,18 +155,14 @@ for (var i = 0; i < answer_key.length; i++) {
         const fracResult = answer_key[i][1].match(fracRegex)?.[0];
         const regexResult = answer_key[i][1].match(regex)?.[0];
         if (fracResult !== undefined) {
-          if (answer_key[i][1].includes("\\\\ge")) {
-              console.log(encodeURIComponent(`x≥${fracResult}`));
-          } else if (answer_key[i][1].includes("\\\\le")) {
-          console.log(encodeURIComponent(`x≤${fracResult}`))
-          } else {
-              console.log(fracResult)
-          }
+          console.log(fracResult);
         } else {
           console.log(regexResult);
         }
         console.log(answer_key[i][1])
-        `);
+        break; // Exit the loop since we found a match
+    }
+}`);
 
     }
     </script>
