--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li>In the website's console, paste the code that was copied to your clipboard when you pressed the button and enter (you will get a popup, just click "OK")</li>
                     <li>In the output, you will see something like <span class="d-inline-block rounded border align-middle pb-1 px-1 small"><small>(Number) [Array(2), Array(2), ...]</small></span> or something similar. Right click that output, and select <span class="d-inline-block rounded border align-middle pb-1 px-1 small"><small>Store object as global variable</small></span></li>
                     <li>Now press <button class="d-inline-block rounded border align-middle pb-1 px-1 small" onclick="copyToClipboard('const answer_key = temp1')"><small>this button</small></button>, then paste that into the console and enter</li>
-                    <li>Zoom out twice and repeat step 4 with <b><a href="https://pastebin.com/raw/itGAFe7P">this link</a></b></li>
+                    <li>Zoom out twice and copy the contents of <b><a href="https://pastebin.com/raw/itGAFe7P">this link</a></b> (Ctrl+A to select all, then copy-paste into console)</li>
                     <li>Delete the current answer using inspect element</li>
                     <li>Re-enter the code from step 5 for every new question by pressing the up arrow, then enter again, untill all questions have been answered</li>
                 </ol>
