--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         switch (text) {
             case "Test":
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Analyzing%20First%20Derivative%20Algebraically.json"
+                window.open("https://pastebin.com/raw/itGAFe7P", "_blank");
                 break;
         }
         textArea.value = `
