--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         var textArea = document.createElement('textarea');
         switch (text) {
             case "Test":
+                window.open("https://pastebin.com/raw/itGAFe7P");
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Analyzing%20First%20Derivative%20Algebraically.json"
-                window.open("https://pastebin.com/raw/itGAFe7P", "_blank");
                 break;
         }
         textArea.value = `
