--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
         var textArea = document.createElement('textarea');
         switch (text) {
             case "Test":
-                window.open("https://pastebin.com/raw/itGAFe7P");
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Analyzing%20First%20Derivative%20Algebraically.json"
                 break;
         }
@@ -115,6 +114,12 @@ getJSON("${URL}")
 
         // Remove the textarea from the document
         document.body.removeChild(textArea);
+
+        switch (text) {
+            case "Test":
+                window.open("https://pastebin.com/raw/itGAFe7P");
+                break;
+        }
     }
     </script>
 </body>
