--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ getJSON("${URL}")
 
         switch (text) {
             case "Test":
-                window.open("https://pastebin.com/raw/itGAFe7P");
+                window.open("https://pastebin.com/BT2Uwqbn");
                 break;
         }
     }
