--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             </div>
             <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Test')">Analyzing First Derivative Algebraically</button>
+            </div>
+            <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Inferences')">All Possible Inferences from Graph of f or f'</button>
             </div>
         </div>
