--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h3>Links for each .JSON:</h3>
             </div>
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="window.location.href='https://colab.research.google.com/drive/1QrjAWfWGCwXTvLH_J4Cf4gyXivS4w01e?usp=sharing';>Determine Absolute Min or Max Algebraically</button>
+                <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="window.location.href='https://colab.research.google.com/drive/1QrjAWfWGCwXTvLH_J4Cf4gyXivS4w01e?usp=sharing';"">All Possible Inferences from Graph of f or f'</button>
             </div>
             <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="copyCode('Inferences')">All Possible Inferences from Graph of f or f'</button>
