--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h3>Links for each .JSON:</h3>
+                <h3>Links for each .JSON/Colab:</h3>
             </div>
             <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-primary align-bottom btn-lg mr-1" onclick="window.open('https://colab.research.google.com/drive/1QrjAWfWGCwXTvLH_J4Cf4gyXivS4w01e?usp=sharing', '_blank');">Determine Absolute Min or Max Algebraically</button>
@@ -32,7 +32,7 @@
         </div>
         <div class="modal-content">
             <div class="modal-header">
-                <h3>How to use it</h3>
+                <h3>How to use it (assuming .JSON)</h3>
             </div>
             <div class="modal-body">
                 <ol>
