--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h1 class="display-2 text-primary"><span class="ion ion-ios-tablet-portrait-outline"></span></h1>
             <h4 class="card-title text-primary">Welcome to The Calculator Repository</h4>
-            <p class="card-text">This is my collection of .JSON files to be used with my respective calculator for deployment.</p>
+            <p class="card-text">This is my collection of .JSON files/Colab links to be used with my respective calculator for deployment.</p>
         </div>
     </div>
     <div class="modal-dialog">
