--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/Analyzing%20First%20Derivative%20Algebraically.json"
                 break;
             case "Inferences":
-                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/pain.json"
+                URL = "https://raw.githubusercontent.com/Michael-D-Santos/calculator_jsons/main/All%20Possible%20Inferences%20from%20Graph%20of%20f%20or%20f'.json"
                 break;
         }
         textArea.value = `
