--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ getJSON("${URL}")
         console.log(
 
         // Now you can manipulate the 'apiData' variable as needed
-        alert('API call successful');
+        alert('API call successful'));
     })
     .catch(function(err) {
         alert('Something went wrong: ' + err);
