--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Calculator Repository</title>
-    <link rel="stylesheet" href="../output.css" />
+    <link rel="stylesheet" href="./output.css" />
 </head>
 <body>
     <div class="hero min-h-screen" style="background-image: url(https://images.unsplash.com/photo-1554224155-3a58922a22c3);">
