--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Calculator Repository</title>
-    <link rel="stylesheet" href="../output.css" />
+    <link rel="stylesheet" href="./output.css" />
 </head>
 <body>
     <div class="hero min-h-screen" style="background-image: url(https://images.unsplash.com/photo-1554224155-3a58922a22c3);">
@@ -45,39 +45,39 @@
         </div>
     </div>
     <div class="hero min-h-screen">
-    <div class="grid grid-cols-3 gap-4">
+    <div class="md:grid grid-cols-3 gap-4">
         <div class="col-span-3 text-center h-40 text-5xl font-bold" id="guide">DIRECTIONS</div>
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card md:w-96 bg-base-100 shadow-xl">
             <div class="card-body">
               <h2 class="card-title">Step 1</h2>
               <p>Click the button that corresponds to the assignment name/problem type</p>
             </div>
           </div>
-          <div class="card w-96 bg-base-100 shadow-xl">
+          <div class="card md:w-96 bg-base-100 shadow-xl">
             <div class="card-body">
               <h2 class="card-title">Step 2</h2>
               <p>In the website's console, paste the code that was copied to your clipboard when you pressed the button and enter (you will get a popup, just click "OK")</p>
             </div>
           </div>
-          <div class="card w-96 bg-base-100 shadow-xl">
+          <div class="card md:w-96 bg-base-100 shadow-xl">
             <div class="card-body">
               <h2 class="card-title">Step 3</h2>
               <p>In the output, you will see something like <kbd class="kbd">(Number) [Array(2), Array(2), ...]</kbd> or something similar. Right click that output, and select <kbd class="kbd">Store object as global variable</kbd></p>
             </div>
           </div>
-          <div class="card w-96 bg-base-100 shadow-xl">
+          <div class="card md:w-96 bg-base-100 shadow-xl">
             <div class="card-body">
               <h2 class="card-title">Step 4</h2>
               <p>Now press the button from the drawer, then <kbd class="kbd">ctrl+v</kbd> into the console and enter</p>
             </div>
           </div>
-          <div class="card w-96 bg-base-100 shadow-xl">
+          <div class="card md:w-96 bg-base-100 shadow-xl">
             <div class="card-body">
               <h2 class="card-title">Step 5</h2>
               <p>Copy the contents of the pastebin which was opened from step 1 (<kbd class="kbd">ctrl+a</kbd> to select all, then <kbd class="kbd">ctrl+v</kbd> into console)</p>
             </div>
           </div>
-          <div class="card w-96 bg-base-100 shadow-xl">
+          <div class="card md:w-96 bg-base-100 shadow-xl">
             <div class="card-body">
               <h2 class="card-title">Step 6</h2>
               <p>Re-enter the code from step 5 for every new question by pressing the up arrow, then enter again, untill all questions have been answered</p>
