--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                   <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
                   <ul class="menu p-4 w-80 min-h-full bg-base-200 text-base-content">
                     <!-- Sidebar content here -->
+                    <li onclick="window.open('https://colab.research.google.com/drive/1cFdF_ZrIFGa7v7ikAiyJTRYva4Dkg7b2?usp=sharing', '_blank');"><a>Antidifferentiate Radicals</a></li>
                     <li onclick="window.open('https://colab.research.google.com/drive/1VpoYoZuCVAU-Ol9Ev5eLwQggxYR-shHC?usp=sharing', '_blank');"><a>Determining Concavity</a></li>
                     <li onclick="copyCode('DGraph2')"><a>Analyzing the Derivative Graph (Level 2)</a></li>
                     <li onclick="window.open('https://colab.research.google.com/drive/1QrjAWfWGCwXTvLH_J4Cf4gyXivS4w01e?usp=sharing', '_blank');"><a>Determine Absolute Min or Max Algebraically</a></li>
